lang/interpret_test/TestAstFunc2/speculate-operators2.txtar
-- main.mcl --
$x = 5
test "hello" {
	anotherstr => "hello world" + $x + "\n",
}
-- OUTPUT --
# err: errUnify: type error: str != int: /main.mcl @ 3:16-3:34
type error: str != int: /main.mcl @ 3:16-3:34

	anotherstr => "hello world" + $x + "\n",
	              ^^^^^^^^^^^^^^^^^^
